# python-makeclean

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  requirements.txt  setup.cfg  setup.py
src/makeclean/: __init__.py  __main__.py
