[metadata]
version = attr: makeclean.__version__
description = remove lists of files and folders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cube707/python-makeclean
author = Jan Wille
author_email = mail@janwille.de
license = MIT
license_files = LICENCE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Build Tools
keywords =
    make
    makefiles
    cleanup
project_urls =
    Download = https://pypi.org/project/makeclean/#files
    Bug Tracker = https://github.com/Cube707/python-makeclean/issues
    Source Code = https://github.com/Cube707/python-makeclean

[options]
python_requires = >=3.10
package_dir =
    = src
install_requires =
    click
    setuptools
    wheel

[options.entry_points]
console_scripts =
    makeclean = makeclean:main

[flake8]
max-complexity = 12
max-line-length = 88
exclude =
    __pycache__/
    .git/
    .venv/

[isort]
profile = black
src_paths = src
lines_after_imports = 2
